# Googlest

./: .env  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  init_mistral.py  init_mistral_languages.py  main.py  pyproject.toml  start.sh
alembic/versions/: 2025_01_18_1200-add_mistral_translator.py  2025_02_25_1705-c07255629b5e_final_tables.py  2025_02_25_1723-f625bbae21a4_final_tables.py  2025_02_25_1724-6e99eb847519_final_tables.py  2025_02_25_1731-de0ebad420c4_final_tables.py  2025_02_25_1755-23f2807df470_final_tables.py  2025_02_27_1015-3732c34017f5_final_tables.py  2025_02_27_1027-86ce262fda75_final_tables.py  2025_02_27_1029-c6bd0d44af7b_final_tables.py  2025_07_19_1349-0fd90051eec3_add_mistral_languages_and_migrate_.py
core/: config.py
core/models/: __init__.py  admin.py  channel.py  language_channel.py  message.py  mistral_language.py  mistral_token.py  token.py  translator_settings.py
core/repositories/: admin.py  base.py  channel.py  language_channel.py  message.py  mistral_language.py  mistral_token.py  token.py  translator_settings.py
dialogs/: __init__.py  getters.py  handlers.py  states.py  windows.py
routers/: main_menu.py
utils/: editor.py  mistar_client.py  mistral_client.py  translator.py
