[project]
name = "red_bot"
version = "0.1.0"
description = ""
authors = [
    {name = "erves", email = "rodionkireev44@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
aiogram = "^3.19.0"
aiogram-dialog = "^2.3.1"
alembic = "^1.15.1"
sqlalchemy = "^2.0.39"
pydantic-settings = "^2.8.1"
black = "^25.1.0"
asyncpg = "^0.30.0"
deepl = "^1.21.1"
moviepy = "^2.2.1"
aiogram-media-group = "^0.5.1"
aiohttp = "^3.11.14"

[tool.poetry]
version = "1.0"  # base version
name = "red_bot"
description = ""
authors = [
    "erves"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"